# proyecto_AI

./: .gitignore  LICENSE  lluvia_matrix.py  pyproject.toml  readme.md  requirements.txt  smoke_test.py
